--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^14.2.1",
+    "@react-native-firebase/auth": "^14.3.0",
+    "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@types/rn-material-ui-textfield": "^1.0.2",
     "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
@@ -23,7 +26,8 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "rn-material-ui-textfield": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
