--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bundle-android": "cd android && ./gradlew bundleRelease"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.1.5",
     "@react-native-firebase/app": "^14.2.1",
     "@react-native-firebase/auth": "^14.3.0",
     "@react-native-google-signin/google-signin": "^7.0.4",
