--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.1.5",
+    "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-firebase/app": "^14.2.1",
     "@react-native-firebase/auth": "^14.3.0",
     "@react-native-google-signin/google-signin": "^7.0.4",
@@ -20,14 +21,17 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@types/rn-material-ui-textfield": "^1.0.2",
+    "axios": "^0.25.0",
     "native-base": "^3.2.2",
     "react": "17.0.2",
+    "react-hook-form": "^7.26.0",
     "react-native": "0.66.4",
     "react-native-bootsplash": "^4.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
+    "react-query": "^3.34.14",
     "rn-material-ui-textfield": "^1.0.5"
   },
   "devDependencies": {
