fix build issue

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -155,6 +155,9 @@ android {
             keyPassword 'android'
         }
     }
+    dexOptions  {
+        javaMaxHeapSize "4g"
+    }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
