--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -29,3 +29,10 @@ FLIPPER_VERSION=0.99.0
 
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx4096m
+
+# Playstore Updates
+
+MIO_UPLOAD_STORE_FILE=/Users/thilagarajankamarajan/mio/playstore/mio-prod-key.keystore
+MIO_UPLOAD_KEY_ALIAS=mio-prod-key
+MIO_UPLOAD_STORE_PASSWORD=Mio@2022
+MIO_UPLOAD_KEY_PASSWORD=Mio@2022
