--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean:android": "cd android && ./gradlew clean",
     "android:dev": "react-native run-android --variant=developmentdebug --appIdSuffix=dev",
     "android:prod": "react-native run-android --variant=productionDebug",
-    "ios": "react-native run-ios",
+    "ios:dev": "ENVFILE=.env.development react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
