--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -175,14 +175,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
-        // release {
-        //     if (project.hasProperty('MIO_UPLOAD_STORE_FILE')) {
-        //         storeFile file(MIO_UPLOAD_STORE_FILE)
-        //         storePassword MIO_UPLOAD_STORE_PASSWORD
-        //         keyAlias MIO_UPLOAD_KEY_ALIAS
-        //         keyPassword MIO_UPLOAD_KEY_PASSWORD
-        //     }
-        // }
+        release {
+            if (project.hasProperty('MIO_UPLOAD_STORE_FILE')) {
+                storeFile file(MIO_UPLOAD_STORE_FILE)
+                storePassword MIO_UPLOAD_STORE_PASSWORD
+                keyAlias MIO_UPLOAD_KEY_ALIAS
+                keyPassword MIO_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     dexOptions  {
         javaMaxHeapSize "4g"
