--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-GOOGLE_WEB_CLIENT_ID=383446887463-m54vlaqlcu2r95obouiinj0r3j42m0n2.apps.googleusercontent.com
+GOOGLE_WEB_CLIENT_ID=528727320506-hsa476ibp245au0pl3do17t9io6ktol1.apps.googleusercontent.com
+BASE_URL=https://homeservices-dev-ab7f9.firebaseapp.com/api/v1
