--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 GOOGLE_WEB_CLIENT_ID=528727320506-qnn462uhd5d3bac306fg6bkdhs156mhp.apps.googleusercontent.com
+BASE_URL=https://homeservices-dev-ab7f9.firebaseapp.com/api/v1
