--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,7 +145,7 @@ android {
         applicationId "com.miohomeservices"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode 2009
         versionName "1.0"
     }
     splits {
@@ -159,13 +159,10 @@ android {
     flavorDimensions "default"
     productFlavors {
         development {
-            applicationIdSuffix  ".dev"
             resValue "string", "build_config_package", "com.miohomeservices"
-            println "Using debug google-service.json"
         }
         production {
             resValue "string", "build_config_package", "com.miohomeservices"
-            println "Using Production google-service.json"
         }
     }
     signingConfigs {
@@ -207,20 +204,20 @@ android {
     }
 
     // applicationVariants are e.g. debug, release
-    applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            // For each separate APK per architecture, set a unique version code as described here:
-            // https://developer.android.com/studio/build/configure-apk-splits.html
-            // Example: versionCode 1 will generate 1001 for armeabi-v7a, 1002 for x86, etc.
-            def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
-            def abi = output.getFilter(OutputFile.ABI)
-            if (abi != null) {  // null for the universal-debug, universal-release variants
-                output.versionCodeOverride =
-                        defaultConfig.versionCode * 1000 + versionCodes.get(abi)
-            }
+    // applicationVariants.all { variant ->
+    //     variant.outputs.each { output ->
+    //         // For each separate APK per architecture, set a unique version code as described here:
+    //         // https://developer.android.com/studio/build/configure-apk-splits.html
+    //         // Example: versionCode 1 will generate 1001 for armeabi-v7a, 1002 for x86, etc.
+    //         def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
+    //         def abi = output.getFilter(OutputFile.ABI)
+    //         if (abi != null) {  // null for the universal-debug, universal-release variants
+    //             output.versionCodeOverride =
+    //                     defaultConfig.versionCode * 1000 + versionCodes.get(abi)
+    //         }
 
-        }
-    }
+    //     }
+    // }
 }
 
 dependencies {
