--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "scripts": {
     "clean:android": "cd android && ./gradlew clean",
-    "android:dev-debug": "react-native run-android --variant=developmentdebug --appIdSuffix=dev",
-    "android:dev-release": "cd android && ./gradlew bundleDevelopmentRelease",
+    "android:dev-debug": "react-native run-android --variant=developmentdebug",
+    "android:dev-bundle-release": "cd android && ./gradlew bundleDevelopmentRelease",
+    "android:dev-apk-release": "cd android && ./gradlew assembleDevelopmentRelease",
+    "android:clean-dev-apk-release": "npm run clean:android && cd android && ./gradlew assembleDevelopmentRelease",
     "android:prod-debug": "react-native run-android --variant=productionDebug",
     "android:prod-release": "cd android && ./gradlew bundleProductionRelease",
     "ios:dev": "ENVFILE=.env.development react-native run-ios",
