--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.1.5",
     "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/netinfo": "^8.0.0",
     "@react-native-firebase/app": "^14.2.1",
     "@react-native-firebase/auth": "^14.3.0",
     "@react-native-google-signin/google-signin": "^7.0.4",
