--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@types/rn-material-ui-textfield": "^1.0.2",
     "axios": "^0.25.0",
+    "fbjs": "^3.0.4",
     "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-hook-form": "^7.26.0",
     "react-native": "0.66.4",
+    "react-native-blob-util": "^0.14.1",
     "react-native-bootsplash": "^4.0.2",
     "react-native-config": "^1.4.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-pdf": "^6.4.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
