--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@invertase/react-native-apple-authentication": "^2.1.5",
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-community/netinfo": "^8.0.0",
-    "@react-native-firebase/analytics": "^14.3.0",
-    "@react-native-firebase/app": "^14.2.1",
-    "@react-native-firebase/auth": "^14.3.0",
+    "@react-native-firebase/analytics": "14.5.0",
+    "@react-native-firebase/app": "14.5.0",
+    "@react-native-firebase/auth": "14.5.0",
     "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
