--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,15 +31,16 @@ target 'MioHomeServices' do
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    # installer.aggregate_targets.each do |aggregate_target|
+    #   aggregate_target.user_project.native_targets.each do |target|
+    #     target.build_configurations.each do |config|
+    #       config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
+    #       config.build_settings['EXCLUDED_ARCHS'] = 'i386'
+    #     end
+    #   end
+    #   aggregate_target.user_project.save
+    # end
   end
 
-  installer.aggregate_targets.each do |aggregate_target|
-    aggregate_target.user_project.native_targets.each do |target|
-      target.build_configurations.each do |config|
-        config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
-        config.build_settings['EXCLUDED_ARCHS'] = 'i386'
-      end
-    end
-    aggregate_target.user_project.save
-  end
+  
 end
