--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "17.0.2",
     "react-hook-form": "^7.26.0",
     "react-native": "0.66.4",
+    "react-native-add-calendar-event": "^4.0.0",
     "react-native-blob-util": "^0.14.1",
     "react-native-bootsplash": "^4.0.2",
     "react-native-code-push": "^7.0.4",
