--- a/ios/MioHomeServices/Info.plist
+++ b/ios/MioHomeServices/Info.plist
@@ -72,5 +72,7 @@
 		</array>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
+		<key>NSCalendarsUsageDescription</key>
+		<key>NSContactsUsageDescription</key>
 	</dict>
 </plist>
