--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "android:clean-dev-apk-release": "npm run clean:android && cd android && ./gradlew assembleDevelopmentRelease",
     "android:prod-debug": "react-native run-android --variant=productiondebug",
     "android:prod-release": "cd android && ./gradlew bundleProductionRelease",
-    "ios:dev": "ENVFILE=.env.development react-native run-ios",
-    "ios:prod": "ENVFILE=.env.production react-native run-ios",
+    "ios:dev": "react-native run-ios",
+    "ios:prod": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
