--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/rn-material-ui-textfield": "^1.0.2",
     "axios": "^0.25.0",
     "fbjs": "^3.0.4",
+    "lottie-ios": "^3.2.3",
+    "lottie-react-native": "^5.1.3",
     "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-devtools-core": "^4.14.0",
@@ -45,6 +47,7 @@
     "react-native-code-push": "^7.0.4",
     "react-native-config": "^1.4.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-pdf": "^6.4.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
