--- a/ios/MioHomeServices/Info.plist
+++ b/ios/MioHomeServices/Info.plist
@@ -74,5 +74,6 @@
 		<false/>
 		<key>NSCalendarsUsageDescription</key>
 		<key>NSContactsUsageDescription</key>
+		<key>NSPhotoLibraryUsageDescription</key>
 	</dict>
 </plist>
