--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-bootsplash": "^4.0.2",
     "react-native-code-push": "^7.0.4",
     "react-native-config": "^1.4.5",
+    "react-native-image-picker": "^4.8.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pdf": "^6.4.0",
