--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-native-firebase/app": "14.5.0",
     "@react-native-firebase/app-check": "^14.5.0",
     "@react-native-firebase/auth": "14.5.0",
+    "@react-native-firebase/storage": "^14.5.0",
     "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
