--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "android:prod-debug": "react-native run-android --variant=productiondebug",
     "android:prod-release": "cd android && ./gradlew bundleProductionRelease",
     "ios:dev": "react-native run-ios",
+    "ios:dev-ipad": "react-native run-ios --udid 00008020-0010641C0A8A402E",
     "ios:prod": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
@@ -49,6 +50,7 @@
     "react-native-config": "^1.4.5",
     "react-native-image-picker": "^4.8.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pdf": "^6.4.0",
     "react-native-safe-area-context": "^3.3.2",
@@ -63,6 +65,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
+    "@types/react-native-keyboard-spacer": "^0.4.2",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
