--- a/ios/MioHomeServices/Info.plist
+++ b/ios/MioHomeServices/Info.plist
@@ -17,7 +17,7 @@
 		<key>CFBundlePackageType</key>
 		<string>APPL</string>
 		<key>CFBundleShortVersionString</key>
-		<string>1.0.2</string>
+		<string>$(MARKETING_VERSION)</string>
 		<key>CFBundleSignature</key>
 		<string>????</string>
 		<key>CFBundleURLTypes</key>
@@ -56,8 +56,14 @@
 				</dict>
 			</dict>
 		</dict>
+		<key>NSCalendarsUsageDescription</key>
+		<string>Calendar Usage</string>
+		<key>NSContactsUsageDescription</key>
+		<string>Contacts Usage</string>
 		<key>NSLocationWhenInUseUsageDescription</key>
 		<string></string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>Access Photo Library</string>
 		<key>UILaunchStoryboardName</key>
 		<string>BootSplash</string>
 		<key>UIRequiredDeviceCapabilities</key>
@@ -72,11 +78,5 @@
 		</array>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
-		<key>NSCalendarsUsageDescription</key>
-		<string>Calendar Usage</string>
-		<key>NSContactsUsageDescription</key>
-		<string>Contacts Usage</string>
-		<key>NSPhotoLibraryUsageDescription</key>
-		<string>Access Photo Library</string>
 	</dict>
 </plist>
