--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-bootsplash": "^4.0.2",
     "react-native-code-push": "^7.0.4",
     "react-native-config": "^1.4.5",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-image-picker": "^4.8.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-spacer": "^0.4.1",
