--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "miohomeservices",
-  "version": "0.0.1",
+  "version": "1.0.9",
   "private": true,
   "scripts": {
     "start:metro": "react-native start",
@@ -28,6 +28,7 @@
     "@react-native-firebase/app-check": "14.5.0",
     "@react-native-firebase/auth": "14.5.0",
     "@react-native-firebase/storage": "14.5.0",
+    "@react-native-firebase/messaging": "14.5.0",
     "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -55,7 +56,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pdf": "^6.4.0",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.1",
+    "react-native-screens": "3.10.2",
     "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.8",
     "rn-material-ui-textfield": "^1.0.5"
