--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-native-firebase/auth": "14.5.0",
     "@react-native-firebase/storage": "14.5.0",
     "@react-native-firebase/messaging": "14.5.0",
+    "@react-native-firebase/dynamic-links": "14.5.0",
     "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
