--- a/ios/MioHomeServices/MioHomeServices.entitlements
+++ b/ios/MioHomeServices/MioHomeServices.entitlements
@@ -8,5 +8,10 @@
 	<array>
 		<string>Default</string>
 	</array>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:miodevhomeservices.page.link</string>
+		<string>applinks:miohomeservices.page.link</string>
+	</array>
 </dict>
 </plist>
