--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:host="miodevhomeservices.page.link" android:scheme="https"/>
         <data android:host="miohomeservices.page.link" android:scheme="https"/>
+        <data android:host="homeservices-dev-ab7f9.firebaseapp.com" android:scheme="https"/>
       </intent-filter>
     </activity>
   </application>
