--- a/ios/MioHomeServices/MioHomeServices.entitlements
+++ b/ios/MioHomeServices/MioHomeServices.entitlements
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>aps-environment</key>
-	<string>development</string>
-	<key>com.apple.developer.applesignin</key>
-	<array>
-		<string>Default</string>
-	</array>
-	<key>com.apple.developer.associated-domains</key>
-	<array>
-		<string>applinks:miodevhomeservices.page.link</string>
-		<string>applinks:miohomeservices.page.link</string>
-	</array>
-</dict>
+	<dict>
+		<key>aps-environment</key>
+		<string>development</string>
+		<key>com.apple.developer.applesignin</key>
+		<array>
+			<string>Default</string>
+		</array>
+		<key>com.apple.developer.associated-domains</key>
+		<array>
+			<string>applinks:miodevhomeservices.page.link</string>
+			<string>applinks:miohomeservices.page.link</string>
+			<string>applinks:homeservices-dev-ab7f9.firebaseapp.com</string>
+		</array>
+	</dict>
 </plist>
