--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "android:clean-dev-apk-release": "npm run clean:android && cd android && ./gradlew assembleDevelopmentRelease",
     "android:prod-debug": "react-native run-android --variant=productiondebug",
     "android:prod-release": "cd android && ./gradlew bundleProductionRelease",
-    "ios:dev": "react-native run-ios",
+    "ios:dev": "react-native run-ios --simulator=\"iPhone 14 Pro\"",
     "ios:dev-ipad": "react-native run-ios --udid 00008020-0010641C0A8A402E",
     "ios:prod": "react-native run-ios",
     "start": "react-native start",
@@ -27,9 +27,9 @@
     "@react-native-firebase/app": "14.5.0",
     "@react-native-firebase/app-check": "14.5.0",
     "@react-native-firebase/auth": "14.5.0",
-    "@react-native-firebase/storage": "14.5.0",
-    "@react-native-firebase/messaging": "14.5.0",
     "@react-native-firebase/dynamic-links": "14.5.0",
+    "@react-native-firebase/messaging": "14.5.0",
+    "@react-native-firebase/storage": "14.5.0",
     "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -51,6 +51,7 @@
     "react-native-code-push": "^7.0.4",
     "react-native-config": "^1.4.5",
     "react-native-exception-handler": "^2.10.10",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-picker": "^4.8.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-spacer": "^0.4.1",
