--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:host="miodevhomeservices.page.link" android:scheme="https"/>
-        <data android:host="miohomeservices.page.link" android:scheme="https"/>
-        <data android:host="homeservices-dev-ab7f9.firebaseapp.com" android:scheme="https"/>
+        <data android:host="miodevhomeservices.page.link/api/v2" android:scheme="https"/>
+        <data android:host="miohomeservices.page.link/api/v2" android:scheme="https"/>
+        <data android:host="homeservices-dev-ab7f9.firebaseapp.com/api/v2" android:scheme="https"/>
       </intent-filter>
     </activity>
   </application>
