--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "android:dev-apk-release": "cd android && ./gradlew assembleDevelopmentRelease",
     "android:clean-dev-apk-release": "npm run clean:android && cd android && ./gradlew assembleDevelopmentRelease",
     "android:prod-debug": "react-native run-android --variant=productiondebug",
+    "android:prod-apk-release": "cd android && ./gradlew assembleProductionRelease",
     "android:prod-release": "cd android && ./gradlew bundleProductionRelease",
     "ios:dev": "react-native run-ios --simulator=\"iPhone 14 Pro\"",
     "ios:dev-ipad": "react-native run-ios --udid 00008020-0010641C0A8A402E",
