--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "miohomeservices",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "private": true,
   "scripts": {
     "start:metro": "react-native start",
+    "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "clean:android": "cd android && ./gradlew clean",
     "android:dev-debug": "react-native run-android --variant=developmentdebug",
     "android:dev-bundle-release": "cd android && ./gradlew bundleDevelopmentRelease",
@@ -17,7 +18,6 @@
     "ios:prod": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "release-android": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
@@ -67,20 +67,36 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
     "@types/react-native-keyboard-spacer": "^0.4.2",
     "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "eslint": "^7.14.0",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.9",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
+    "prettier": "^2.7.1",
+    "prettier-plugin-organize-imports": "^3.1.1",
     "react-test-renderer": "17.0.2",
     "reactotron-react-native": "^5.0.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.8.4"
   },
   "resolutions": {
     "@types/react": "^17"
