Update Job Status

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -77,7 +77,9 @@
     },
     "import/resolver": {
       "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        "paths": ["src"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"],
+        "moduleDirectory": ["node_modules", "src"]
       }
     }
   }
