--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -77,9 +77,7 @@
     },
     "import/resolver": {
       "node": {
-        "paths": ["src"],
-        "extensions": [".js", ".jsx", ".ts", ".tsx"],
-        "moduleDirectory": ["node_modules", "src"]
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     }
   }
