--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,5 @@
     "source.fixAll.eslint": true
   },
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
-  "typescript.preferences.includePackageJsonAutoImports": "off",
-  "eslint.workingDirectories": [{ "mode": "auto" }]
+  "typescript.preferences.importModuleSpecifier": "relative"
 }
