--- a/package.json
+++ b/package.json
@@ -57,10 +57,12 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-pager-view": "^6.0.1",
     "react-native-pdf": "^6.4.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "3.10.2",
     "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.3.0",
     "react-redux": "^7.2.8",
     "rn-material-ui-textfield": "^1.0.5"
   },
