--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "android:dev-debug": "react-native run-android --variant=developmentdebug",
     "android:dev-bundle-release": "cd android && ./gradlew bundleDevelopmentRelease",
     "android:dev-apk-release": "cd android && ./gradlew assembleDevelopmentRelease",
-    "android:clean-dev-apk-release": "npm run clean:android && cd android && ./gradlew assembleDevelopmentRelease",
+    "android:uat-debug": "react-native run-android --variant=uatdebug",
+    "android:uat-bundle-release": "cd android && ./gradlew bundleUatRelease",
+    "android:uat-apk-release": "cd android && ./gradlew assembleUatRelease",
     "android:prod-debug": "react-native run-android --variant=productiondebug",
+    "android:prod-bundle-release": "cd android && ./gradlew bundleProductionRelease",
     "android:prod-apk-release": "cd android && ./gradlew assembleProductionRelease",
-    "android:prod-release": "cd android && ./gradlew bundleProductionRelease",
     "ios:dev": "react-native run-ios --simulator=\"iPhone 14 Pro\"",
     "ios:dev-ipad": "react-native run-ios --udid 00008020-0010641C0A8A402E",
+    "ios:uat": "react-native run-ios --simulator=\"iPhone 14 Pro\"",
     "ios:prod": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
