--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -32,7 +32,11 @@ org.gradle.jvmargs=-Xmx4096m
 
 # Playstore Updates
 
-MIO_UPLOAD_STORE_FILE=/Users/thilagarajankamarajan/mio/store/customer/mio-prod-key.keystore
-MIO_UPLOAD_KEY_ALIAS=mio-prod-key
+# UAT - DEV_CONFIG
+MIO_UPLOAD_STORE_FILE=/Users/thilagarajankamarajan/mio/store/app-distribution/mio-uat-key.keystore
+MIO_UPLOAD_KEY_ALIAS=mio-uat-key
+# PROD - PROD_CONFIG
+# MIO_UPLOAD_STORE_FILE=/Users/thilagarajankamarajan/mio/store/customer/mio-prod-key.keystore
+# MIO_UPLOAD_KEY_ALIAS=mio-prod-key
 MIO_UPLOAD_STORE_PASSWORD=Mio@2022
 MIO_UPLOAD_KEY_PASSWORD=Mio@2022
