--- a/ios/MioHomeServices/Info.plist
+++ b/ios/MioHomeServices/Info.plist
@@ -49,11 +49,11 @@
 		<key>CFBundleVersion</key>
 		<string>$(CURRENT_PROJECT_VERSION)</string>
 		<!-- DEV_CONFIG -->
-		<key>CodePushDeploymentKey</key>
-		<string>gAQxMj338cpKmV5bU6qO2DYRfUaOHM2WiCsPy</string>
-		<!-- PROD_CONFIG | UAT_CONFIG -->
 		<!-- <key>CodePushDeploymentKey</key>
-		<string>mfXd-MWKqcfdpQc5eYwx2latKtHiUApEZw_35</string> -->
+		<string>gAQxMj338cpKmV5bU6qO2DYRfUaOHM2WiCsPy</string> -->
+		<!-- PROD_CONFIG | UAT_CONFIG -->
+		<key>CodePushDeploymentKey</key>
+		<string>mfXd-MWKqcfdpQc5eYwx2latKtHiUApEZw_35</string>
 		<!--  -->
 		<key>LSRequiresIPhoneOS</key>
 		<true/>
@@ -74,6 +74,8 @@
 		<string>Contacts Usage</string>
 		<key>NSLocationWhenInUseUsageDescription</key>
 		<string></string>
+		<key>NSCameraUsageDescription</key>
+		<string>Access Camera</string>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>Access Photo Library</string>
 		<key>UILaunchStoryboardName</key>
